# Interpretability-for-LeWorldModel

./: .gitignore  STEERING_FINDINGS.md  conda_environment.yaml  generate_conda_env.sh  pyproject.toml  render_utils.py  train.py
config/eval/: pusht_steering.yaml
config/train/: lewm.yaml
config/train/data/: dmc.yaml  ogb.yaml  pusht.yaml  tworoom.yaml
interp_utils/: _steering.py  compare_steered_embeddings.py  compare_steering_embeddings.py  extract_pusht_encoder_cls_embeddings.py  probe_agent_position.py  probing.py
interp_utils/steering/: aggregate.py  binary_separability.py  classifier_direction.py  closed_loop.py  concat_layer_probe.py  conditional_direction.py  delta_regression.py  direction_classification.py  episode_pairs.py  goal_relative_orientation.py  metrics.py  open_loop.py  orientation_classification.py  probe_io.py  steered_model.py  steering_math.py  validate_direction.py  validate_direction_rendered.py
jobs/: compare_steered_embeddings.sh  download_pusht_data.sh  download_pusht_model.job  download_pusht_model.sh  eval_pusht_lewm.job  eval_pusht_lewm.sh  extract_pusht_embeddings.job  extract_pusht_embeddings.sh  install_env.sh  install_pusht_data.job  probe_agent_position.sh  probing.sh  setup_env.job  steer_aggregate.sh  steer_closed_loop.sh  steer_concat_layer_probe.sh  steer_conditional_direction.sh  steer_delta_regression.sh  steer_goal_relative_orientation.sh  steer_open_loop.sh  steer_orientation_classification.sh
tests/: test_episode_pairs.py  test_metrics.py  test_probe_io.py  test_steered_model_hook.py  test_steering_math.py
(+1 files in other folders)
