[project]
name = "leworldmodel"
version = "0.1.0"
description = "LeWorldModel: Stable End-to-End Joint-Embedding Predictive Architecture from Pixels"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "ale-py>=0.12.0",
    "datasets>=4",
    "h5py>=3.16.0",
    "huggingface-hub>=1.20.1",
    "imageio>=2.37.3",
    "imageio-ffmpeg>=0.6.0",
    "pygame>=2.6.1",
    "pymunk>=7.3.0",
    "shapely>=2.1.2",
    "stable-worldmodel[format,train]>=0.1.1",
    "zstandard>=0.25.0",
]

[tool.uv]
package = false
